# msgvault

./: .dockerignore  .gitignore  .mcp.json  .roborev.toml  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.yml  flake.nix  go.mod  go.sum  prek.toml  review-loop-decisions.md
.flox/: env.json
.flox/env/: manifest.toml
.githooks/: post-commit  pre-commit
.github/: CODEOWNERS  SECURITY_BOT.md  dependabot.yml  trusted-contributors.json
.github/scripts/: security_review.py  test_security_review.py
.github/workflows/: ci.yml  docker.yml  release.yml  security-review.yml
cmd/msgvault/: main.go
docs/: PG_STATUS.md  api.md  desktop-app-proposal.md  docker.md  import-mbox-reorg-plan.md  msgvault_integration.md  msgvault_pg_implementation_prompt.md  msgvault_pg_issue_draft.md  recovery.md  vector-search.md  web-ui-plan.md  web-ui.md
docs/accounts-identities-collections-dedup/: README.md  spec.md
internal/chat/: chat.go  (+3 more)
launchd/: com.msgvault.serve.plist
pg_refactor_docs/: msgvault_pg_implementation_prompt.md
scripts/: build.ps1  changelog.sh  import-all.sh  install.ps1  install.sh  release.sh  scheduled-import.sh  update-nix-flake.sh
scripts/msgvault_sdk/: pyproject.toml
scripts/msgvault_sdk/examples/: analyze_volume.py  cleanup_noreply.py  find_large_messages.py  list_top_senders.py
scripts/msgvault_sdk/src/msgvault_sdk/: __init__.py  dataframe.py  db.py  errors.py  query.py  vault.py
scripts/msgvault_sdk/tests/: conftest.py  test_dataframe.py  test_db.py  test_errors.py  test_mutations.py  test_query.py  test_vault.py
(+492 files in other folders)
