[project]
name = "msgvault-sdk"
version = "0.1.0"
description = "Python SDK for programmatic access to msgvault email archives"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = ["pytest>=8.0", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msgvault_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
